# registro-pagos

./: CMakeLists.txt  LICENSE  README.md  autobuild.sh  run.sh
src/: LicenseManager.cpp  LicenseManager.h  main.cpp
src/data/: Database.cpp  Database.h  Migrations.cpp  Migrations.h
src/data/repository/: PaymentRepository.cpp  PaymentRepository.h  StudentRepository.cpp  StudentRepository.h
src/ui/: MainWindow.cpp  MainWindow.h  TableUtils.h
tools/: LicGen.cpp
